tests/ui/validate_no_args.stderr
error: expected attribute arguments in parentheses: #[validate(...)]
 --> $DIR/validate_no_args.rs:5:2
  |
5 |     #[validate]
  |     ^^^^^^^^^^^
