tests/ui/validate_no_args.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData {
	#[validate]
	value: u8
}

fn main() {
}
